--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ayos | Cara Cruz</title>
+    <title>Unity WebGL Player | gamebox-caracruz</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -43,21 +43,19 @@
                 UnityInAppBrowser.sendMessageFromJS(message);
             }
         }
-        function ExitGame(val, token) {
+        function ExitGame(val) {
             if (urlParams.has('lobby')) {
-                var lob = urlParams.get('lobby') + '/?' + urlParams.get('partner_id');
-                window.location.href = lob + '&token=' + token;
+                var lob = urlParams.get('lobby');
+                window.location.href = lob;
             } else {
                 if (isIOS()) {
                     try {
-                        alert('[EXIT][IOS] Exiting with code: ' + val);
                         window.location.href = "ayos://Exit?code=" + val;
                     } catch (err) {
-                        alert('[EXIT][IOS] Cannot exit: ' + err.message);
+                        console.log('[EXIT][IOS] Cannot exit: ' + err.message);
                     }
                 } else if (isAndroid()) {
                     try {
-                        alert('[EXIT][ANDROID] Exiting with code: ' + val);
                         sendMessageToUnity("Exit=" + val);
                     } catch (err) {
                         console.log('[EXIT][ANDROID] Cannot exit: ' + err.message);
@@ -103,8 +101,8 @@
         frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js",
         codeUrl: buildUrl + "/gamebox-cara-cruz.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Multisys Technologies Corporation",
-        productName: "Cara Cruz",
+        companyName: "MultisysCorporation",
+        productName: "gamebox-caracruz",
         productVersion: "0.1",
         //showBanner: unityShowBanner,
       };
