--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyDndTG92xCi69d2c5KrA9aklolJiBc3Rb4",
-    authDomain: "sportbase-a4f26.firebaseapp.com",
-    databaseURL: "https://sportbase-a4f26-default-rtdb.firebaseio.com",
-    projectId: "sportbase-a4f26",
-    storageBucket: "sportbase-a4f26.appspot.com",
-    messagingSenderId: "449530808115",
-    appId: "1:449530808115:web:048b07dc87fb741843a046"
+    apiKey: "AIzaSyA1IGjReIekp2jRVwWY1-nii4sVUhO3OoA",
+    authDomain: "html-unity.firebaseapp.com",
+    databaseURL: "https://html-unity-default-rtdb.firebaseio.com",
+    projectId: "html-unity",
+    storageBucket: "html-unity.appspot.com",
+    messagingSenderId: "516484608047",
+    appId: "1:516484608047:web:33b73570e3a25332c396da"
   };
 
   // Initialize Firebase and features
