--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Unity WebGL Player | YourProduct</title>
 
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
@@ -46,11 +45,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/YourProductWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/YourProductWebGL.data",
+        frameworkUrl: buildUrl + "/YourProductWebGL.framework.js",
+        codeUrl: buildUrl + "/YourProductWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YourCompany",
         productName: "YourProductName",
@@ -121,13 +120,13 @@
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA1IGjReIekp2jRVwWY1-nii4sVUhO3OoA",
-    authDomain: "html-unity.firebaseapp.com",
-    databaseURL: "https://html-unity-default-rtdb.firebaseio.com",
-    projectId: "html-unity",
-    storageBucket: "html-unity.appspot.com",
-    messagingSenderId: "516484608047",
-    appId: "1:516484608047:web:33b73570e3a25332c396da"
+    apiKey: "AIzaSyCnA5tH07xm_VGUuEY2K-sMr1igIyY887c",
+    authDomain: "mulu-plot.firebaseapp.com",
+    projectId: "mulu-plot",
+    storageBucket: "mulu-plot.appspot.com",
+    messagingSenderId: "391314006481",
+    appId: "1:391314006481:web:7fdd80fa4ba3506ba180f0",
+    measurementId: "G-TBXXELG0SJ"
   };
 
   // Initialize Firebase and features
