--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/YourProductWebGL.loader.js";
+      var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/YourProductWebGL.data",
-        frameworkUrl: buildUrl + "/YourProductWebGL.framework.js",
-        codeUrl: buildUrl + "/YourProductWebGL.wasm",
+        dataUrl: buildUrl + "/Build.data",
+        frameworkUrl: buildUrl + "/Build.framework.js",
+        codeUrl: buildUrl + "/Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "YourCompany",
-        productName: "YourProductName",
+        companyName: "MULU Plot",
+        productName: "Sportbase",
         productVersion: "1.0",
       };
 
