--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         frameworkUrl: buildUrl + "/WebBuild.framework.js",
         codeUrl: buildUrl + "/WebBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "YourCompany",
-        productName: "YourProductName",
+        companyName: "MULUPLOT",
+        productName: "Sportbase",
         productVersion: "1.0",
       };
 
