--- a/index.html
+++ b/index.html
@@ -3,74 +3,34 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Ayos | Cara Cruz</title>
+    <title>Unity WebGL Player | Lobby</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=450 height=900></canvas>
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Lobby</div>
+      </div>
     </div>
     <script>
-        const queryString = window.location.search;
-        const urlParams = new URLSearchParams(queryString);
-
-        var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-        function isIOS() {
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return true;
-            } else {
-                return false;
-            }
-        }
-        function isAndroid() {
-            return (/android/i.test(userAgent));
-        }
-        function sendMessageToUnity(message) {
-            if (isIOS()) {
-                try {
-                    webkit.messageHandlers.UnityInAppBrowser.postMessage(message);
-                } catch (err) {
-                    console.log('[IOS] Cannot reach native code');
-                }
-            } else if (isAndroid()) {
-                UnityInAppBrowser.sendMessageFromJS(message);
-            }
-        }
-        function ExitGame(val, token) {
-            if (urlParams.has('lobby')) {
-                var lob = urlParams.get('lobby') + '/?' + urlParams.get('partner_id');
-                window.location.href = lob + '&token=' + token;
-            } else {
-                if (isIOS()) {
-                    try {
-                        alert('[EXIT][IOS] Exiting with code: ' + val);
-                        window.location.href = "ayos://Exit?code=" + val;
-                    } catch (err) {
-                        alert('[EXIT][IOS] Cannot exit: ' + err.message);
-                    }
-                } else if (isAndroid()) {
-                    try {
-                        alert('[EXIT][ANDROID] Exiting with code: ' + val);
-                        sendMessageToUnity("Exit=" + val);
-                    } catch (err) {
-                        console.log('[EXIT][ANDROID] Cannot exit: ' + err.message);
-                    }
-                }
-            }
-            //ELSE exit unity webview
-        }
 
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -78,35 +38,35 @@
       // Modify or remove this function to customize the visually presented
       // way that non-critical warnings and error messages are presented to the
       // user.
-      //function unityShowBanner(msg, type) {
-      //  function updateBannerVisibility() {
-      //    warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-      //  }
-      //  var div = document.createElement('div');
-      //  div.innerHTML = msg;
-      //  warningBanner.appendChild(div);
-      //  if (type == 'error') div.style = 'background: red; padding: 10px;';
-      //  else {
-      //    if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-      //    setTimeout(function() {
-      //      warningBanner.removeChild(div);
-      //      updateBannerVisibility();
-      //    }, 5000);
-      //  }
-      //  updateBannerVisibility();
-      //}
+      function unityShowBanner(msg, type) {
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
 
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/gamebox-cara-cruz.loader.js";
       var config = {
-        dataUrl: buildUrl + "/gamebox-cara-cruz.data",
-        frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js",
-        codeUrl: buildUrl + "/gamebox-cara-cruz.wasm",
+        dataUrl: buildUrl + "/gamebox-cara-cruz.data.br",
+        frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js.br",
+        codeUrl: buildUrl + "/gamebox-cara-cruz.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Multisys Technologies Corporation",
-        productName: "Cara Cruz",
-        productVersion: "0.1",
-        //showBanner: unityShowBanner,
+        companyName: "DefaultCompany",
+        productName: "Lobby",
+        productVersion: "1.0",
+        showBanner: unityShowBanner,
       };
 
       // By default Unity keeps WebGL canvas render target size matched with
@@ -124,18 +84,18 @@
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
+        canvas.className = "unity-mobile";
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "450px";
-        canvas.style.height = "900px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
@@ -145,51 +105,18 @@
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-            loadingBar.style.display = "none";
-            var data = urlParams.get('auth') + "&" + urlParams.get('uuid');
-            unityInstance.SendMessage("[Bridge]", "SetData", data);
+              }).then((unityInstance) => {
+                loadingBar.style.display = "none";
+                fullscreenButton.onclick = () => {
+                  unityInstance.SetFullscreen(1);
+                };
+              }).catch((message) => {
+                alert(message);
+              });
+            };
 
-            var hidden, visibilityChange;
-            var isPageVisible = true;
-
-            if (typeof document.hidden !== "undefined") {
-                hidden = "hidden";
-                visibilityChange = "visibilitychange";
-            } else if (typeof document["msHidden"] !== "undefined") {
-                hidden = "msHidden";
-                visibilityChange = "msvisibilitychange";
-            } else if (typeof document["webkitHidden"] !== "undefined") {
-                hidden = "webkitHidden";
-                visibilityChange = "webkitvisibilitychange";
-            }
-
-            function handleVisibilityChange(hiddenState, reason) {
-                if (hiddenState) {
-                    if (isPageVisible) {
-                        //console.log('visibility: hidden', reason);
-                        isPageVisible = false;
-                        unityInstance.SendMessage("[Bridge]", "TogglePause", "PAUSED");
-                    }
-                } else {
-                    //console.log('visibility: restored', reason);
-                    isPageVisible = true;
-                    unityInstance.SendMessage("[Bridge]", "TogglePause", "UNPAUSED");
-                }
-            }
-
-            if (typeof document.addEventListener === "undefined" || typeof document[hidden] === "undefined") {
-                console.log("Browser doesn't support the Page visibility API.");
-            } else {
-                document.addEventListener(visibilityChange, () => handleVisibilityChange(document.hidden), false);
-                window.addEventListener("focus", () => handleVisibilityChange(false, 'focus'));
-                window.addEventListener("blur", () => handleVisibilityChange(true, 'blur'));
-            }
-        }).catch((message) => {
-          alert(message);
-        });
-      };
       document.body.appendChild(script);
+
     </script>
   </body>
 </html>
