--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/YourProductWebGL.loader.js";
+      var loaderUrl = buildUrl + "/gamebox-cara-cruz.loader.js";
       var config = {
-        dataUrl: buildUrl + "/YourProductWebGL.data",
-        frameworkUrl: buildUrl + "/YourProductWebGL.framework.js",
-        codeUrl: buildUrl + "/YourProductWebGL.wasm",
+        dataUrl: buildUrl + "/gamebox-cara-cruz.data",
+        frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js",
+        codeUrl: buildUrl + "/gamebox-cara-cruz.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YourCompany",
         productName: "YourProductName",
