--- a/index.html
+++ b/index.html
@@ -120,14 +120,13 @@
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "your apiKey",
-    authDomain: "your authDomain",
-    databaseURL: "your databaseURL",
-    projectId: "your projectId",
-    storageBucket: "your storageBucket",
-    messagingSenderId: "your messagingSenderId",
-    appId: "your appId",
-    measurementId: "your measurementId"
+    apiKey: "AIzaSyA1IGjReIekp2jRVwWY1-nii4sVUhO3OoA",
+    authDomain: "html-unity.firebaseapp.com",
+    databaseURL: "https://html-unity-default-rtdb.firebaseio.com",
+    projectId: "html-unity",
+    storageBucket: "html-unity.appspot.com",
+    messagingSenderId: "516484608047",
+    appId: "1:516484608047:web:33b73570e3a25332c396da"
   };
 
   // Initialize Firebase and features
