--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/gamebox-cara-cruz.loader.js";
+      var loaderUrl = buildUrl + "/YourProductWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/gamebox-cara-cruz.data",
-        frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js",
-        codeUrl: buildUrl + "/gamebox-cara-cruz.wasm",
+        dataUrl: buildUrl + "/YourProductWebGL.data",
+        frameworkUrl: buildUrl + "/YourProductWebGL.framework.js",
+        codeUrl: buildUrl + "/YourProductWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "YourCompany",
         productName: "YourProductName",
@@ -120,13 +120,14 @@
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA1IGjReIekp2jRVwWY1-nii4sVUhO3OoA",
-    authDomain: "html-unity.firebaseapp.com",
-    databaseURL: "https://html-unity-default-rtdb.firebaseio.com",
-    projectId: "html-unity",
-    storageBucket: "html-unity.appspot.com",
-    messagingSenderId: "516484608047",
-    appId: "1:516484608047:web:33b73570e3a25332c396da"
+    apiKey: "your apiKey",
+    authDomain: "your authDomain",
+    databaseURL: "your databaseURL",
+    projectId: "your projectId",
+    storageBucket: "your storageBucket",
+    messagingSenderId: "your messagingSenderId",
+    appId: "your appId",
+    measurementId: "your measurementId"
   };
 
   // Initialize Firebase and features
