--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
   <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA1IGjReIekp2jRVwWY1-nii4sVUhO3OoA",
-    authDomain: "html-unity.firebaseapp.com",
-    databaseURL: "https://html-unity-default-rtdb.firebaseio.com",
-    projectId: "html-unity",
-    storageBucket: "html-unity.appspot.com",
-    messagingSenderId: "516484608047",
-    appId: "1:516484608047:web:33b73570e3a25332c396da"
+      apiKey: "AIzaSyD3vKrP9ODrDIRIqTkIHjRXQyHA-4rbfHg",
+      authDomain: "ayos-9d4e4.firebaseapp.com",
+      databaseURL: "https://ayos-9d4e4-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "ayos-9d4e4",
+      storageBucket: "ayos-9d4e4.appspot.com",
+      messagingSenderId: "528649608707",
+      appId: "1:528649608707:web:84498088ce351f694ab836",
+      measurementId: "G-97B90ZQ7RZ"
   };
 
   // Initialize Firebase and features
