--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         dataUrl: buildUrl + "/gamebox-cara-cruz.data",
         frameworkUrl: buildUrl + "/gamebox-cara-cruz.framework.js",
         codeUrl: buildUrl + "/gamebox-cara-cruz.wasm",
+        memoryUrl: buildUrl + "/",
+        symbolsUrl: buildUrl + "/",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "YourCompany",
-        productName: "YourProductName",
+        companyName:  "DefaultCompany",
+        productName: "Lobby",
         productVersion: "1.0",
       };
 
