--- a/index.html
+++ b/index.html
@@ -3,24 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | YourProduct</title>
-
+    <title>Ayos | Lobby</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-    <style>
-    .text-center {
-        text-align: center;
-    }
-    .g-recaptcha {
-        display: inline-block;
-    }
-    </style>
   </head>
-
   <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=450 height=900></canvas>
-      
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -29,6 +18,8 @@
       </div>
     </div>
     <script>
+      const queryString = window.location.search;
+      const urlParams = new URLSearchParams(queryString);
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/gamebox-cara-cruz.loader.js";
       var config = {
@@ -47,9 +38,6 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
-
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
       // Set this to false if you want to decouple this synchronization from
@@ -75,7 +63,7 @@
         canvas.style.height = "900px";
       }
       loadingBar.style.display = "block";
-
+      
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
